bitfields/tests/compile_error_cases/errors/bitfield_invalid_type.rs
use bitfields::bitfield;

#[bitfield(+--)]
pub struct Bitfield {
    a: u8,
}

fn main() {}
